# eom-plugins

./: AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  git.mk
plugins/: Makefile.am
plugins/exif-display/: Makefile.am  eom-exif-display-plugin.c  eom-exif-display-plugin.h  exif-display-config.ui  exif-display.eom-plugin.desktop.in
plugins/fit-to-width/: Makefile.am  eom-fit-to-width-plugin.c  eom-fit-to-width-plugin.h  fit-to-width.eom-plugin.desktop.in
plugins/map/: Makefile.am  eom-map-plugin.c  eom-map-plugin.h  map.eom-plugin.desktop.in
plugins/postasa/: Makefile.am  eom-postasa-plugin.c  eom-postasa-plugin.h  postasa-config.xml  postasa.eom-plugin.desktop.in
plugins/postr/: Makefile.am  eom-postr-plugin.c  eom-postr-plugin.h  postr.eom-plugin.desktop.in
plugins/pythonconsole/: Makefile.am  pythonconsole.eom-plugin.desktop.in  pythonconsole.py
plugins/send-by-mail/: Makefile.am  eom-send-by-mail-plugin.c  eom-send-by-mail-plugin.h  send-by-mail.eom-plugin.desktop.in
plugins/slideshowshuffle/: Makefile.am  slideshowshuffle.eom-plugin.desktop.in  slideshowshuffle.py
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  as.po  be@latin.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hu.po  id.po  it.po  ja.po  kn.po  lt.po  mk.po  ml.po  mr.po  nb.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  sl.po  sq.po  (+8 more)
